@@ -1,3 +1,4 @@
+1948 changed ISO 639-2 language codes for Croatian, Romanian and Serbian
 1947 [File Indexer] fixed selecting of settings after initial opening. Bug #3182423
 1946 [Audio Jobs] update elapsed time while preprocessing
 1945 [VideoPlayer] while resizing/opening the window is moved to the visible area of the desktop
